welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: not found: value num
			x=num(i)
                          ^