welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	var x:Int=nums(0)
	var y:Int=0
	for ( i<-1 to nums.length -1) {
		if( nums(i)>x) {
			x=num(i)
			y=i
		}
	}
		return y
	
}
